--- a/morning.html
+++ b/morning.html
@@ -11,55 +11,79 @@
   <!-- 返回上一页按钮 -->
   <button class="back-button" onclick="history.back()">GO BACK</button>
 
-
     <div class="content">
         
-        <h1>早</h1>
+        <h1>晚安</h1>
 
         <!-- 添加多个书签块 -->
         <div class="bookmark-block">
-            <h2>初识</h2>
-            <p>五年前，我们在一个偶然的时刻相识。那时候我刚经历感情低谷，你的陪伴给了我莫大的安慰。</p>
+            <h2>useless</h2>
+            <p>现在语言组织能力像小学生，见笑了哈哈。那次聊的时候这么能说还以为你学文，思路很快且一针见血；不过想了想你语言能力一直挺强的，是我自己落伍了:( <br>这个网站只做了一个书签功能，内容也挺没营养的，看不看也无所谓，主要是记下一些想说的且没来得及说的，不想再忘记任何东西了</p>
+        </div>
+
+        <div class="bookmark-block">
+            <h2>初</h2>
+            <p>初识挺草率，我问你要的微信吧，忘了怎么聊起来的只记得当时初一；印象很深刻的一幕是你站在窗边，我问你要不要薯片，你说不要，just an ordinary scene, yet somehow unforgettable.</p>
         </div>
         
         <div class="bookmark-block">
-            <h2>共度的夜晚</h2>
-            <p>无数个夜晚，我们在电话中畅谈，聊未来、聊梦想。那些看似平凡的时刻，如今成为了我最深的怀念。</p>
+            <h2>自己</h2>
+            <p>无数个夜晚无数条信息；毫不在意变成日思夜想。我不懂爱，以前将自己伪装成会爱，现在也在矛盾之间挣扎。差不多忘光我们聊过的内容，依稀能回忆的只有那种感觉，冥冥之中那种感觉将我引领像对你的思念。对我来说，你很幽默，照顾别人，专情，但先爱自己再爱别人吧，让你受委屈了。<br>11/7 update：<br>不至于日思夜想了</p>
         </div>
 
         <div class="bookmark-block">
-            <h2>你对我的付出</h2>
-            <p>即便在我疏忽的时刻，你依然默默守护着我们之间的联系。</p>
+            <h2>pity</h2>
+            <p>初二下学期你应该就知道我是什么人了，那时其实就应该离开的，我也很抱歉没有和你划清界限；当时好bitchy，觉得钓着人很好玩吧，现在看简直幼稚到爆。</p>
         </div>
 
         <div class="bookmark-block">
-            <h2>初见的温暖</h2>
-            <p>那是一个阳光灿烂的下午，我们在同一个地方相遇。彼此的笑容至今难忘。</p>
+            <h2>lucky</h2>
+            <p>有时候和你发信息texts还没发出去你就能先一步发出我想说的，遇到你真的很幸运。<br>即使你觉得你我是陌生人，你也是我人生中重要的一站。<br>
+            </p>
         </div>
 
         <div class="bookmark-block">
-            <h2>共同的时光</h2>
-            <p>那些共度的时光成为了我心中最珍贵的记忆。曾经的陪伴让我感到安心。</p>
+            <h2>growth</h2>
+            <p>你变了，in a good way. 相反我变得不会表达，逐渐不和任何人分享自己，
+                把自己封闭起来感觉也挺好。你那天说过会儿走，让我多讲讲；<br>那下面我就说些没用的小事咯:)
+            </p>
         </div>
 
         <div class="bookmark-block">
-            <h2>无声的理解</h2>
-            <p>即便在未曾说出口的时刻，你总能理解我内心的波动，给予默默的支持。</p>
+            <h2>ta</h2>
+            <p> 2023年11月之前我把所有情感和时间给了他，逐渐也不和家人朋友联系。他控制欲特别强，限制穿衣，微信列表，出行，限制我交友。但他当时对我挺好，所以我为他拒绝了所有异性和社交--<br>which was the most regret thing I did, but I also appreciate that. </p>
         </div>
 
         <div class="bookmark-block">
-            <h2>hi</h2>
-            <p>hehe</p>
+            <h2>gua</h2>
+            <p>After November, he became obsessed with a soccer game. He stopped answering calls or texts and basically vanished for months. 
+                I was speechless，but who am I? I never been someone who’s overly focused on relationships, so I shifted my attention back to my own life. 
+                You know The Sims 4, right? You asked for my account previously, yeah I started playing it again, initially just to keep myself busy to forget abt that stupid guy. 
+                Gradually, though, I found myself getting into independent creation. What began as casual gaming evolved into making my own game mods, doing 3D modeling and rendering, reprogramming game mechanics, 
+                and building my own website. Within a year, I was taking on projects and making six figures-ALL BY MYSELF.
+
+                <br>That’s when I realized that the emotional value I get from others can’t even compare to the fulfillment of earning my own income.</p>
         </div>
 
         <div class="bookmark-block">
-            <h2>cool</h2>
-            <p>hake</p>
+            <h2>Tired</h2>
+            <p>每个人都有自己的步伐，或快或慢，等久了会好累。或许我可以和某个时期的你共情吧，如果你曾等过。
+            </p>
+        </div>
+        <div class="bookmark-block">
+            <h2>sry</h2>
+            <p>觉得’对不起比‘抱歉’更真诚些。对不起从没在乎过你的感受，浪费了你最有活力的几年。好愚蠢啊，无论是当时不认真对你，还是现在在这里和你道歉。</p>
         </div>
 
         <div class="bookmark-block">
-            <h2>cefe</h2>
-            <p>hakefee</p>
+            <h2>diffuse</h2>
+            <p>有时候写下来思绪就没这么复杂了，我对回到过去的执念也逐渐消散。</p>
+        </div>
+
+        <div class="bookmark-block">
+            <h2>let go</h2>
+            <p>其实初稿字挺多，过了一段时间回顾后觉得其实也不用说这么多，回想你的话--我们确实没这么熟。<br>曾想过好多不实际的：也许回国后we could have a cup of coffee tgt;也许我们能做朋友；也许...
+        <br>但也只是也许罢了。12或13小时的时差,如果你那边是早上，早安；如果是晚上，晚安。</p>
         </div>
 
         <!-- 分页按钮 -->
@@ -68,6 +92,7 @@
             <button id="nextButton" onclick="nextPage()">下一页</button>
         </div>
     </div>
+
 
     <script src="script.js"></script>
 </body>
