--- a/morning.html
+++ b/morning.html
@@ -82,8 +82,8 @@
 
         <div class="bookmark-block">
             <h2>let go</h2>
-            <p>其实初稿字挺多，过了一段时间回顾后觉得其实也不用说这么多，回想你的话--我们确实没这么熟。<br>曾想过好多不实际的：也许回国后we could have a cup of coffee tgt;也许我们能做朋友；也许...
-        <br>但也只是也许罢了。12或13小时的时差,如果你那边是早上，早安；如果是晚上，晚安。</p>
+            <p>其实初稿写了很多，网站功能也挺多元的；过了一段时间后觉得其实也不用做这么多，是啊，都翻篇了<br>曾想过好多不实际的：也许回国后we could have a cup of coffee tgt;也许我们能做朋友；也许...
+        <br>但也只是也许罢了，我领盒饭了lol。12或13小时的时差,如果你那边是早上，早安；如果是晚上，晚安。</p>
         </div>
 
         <!-- 分页按钮 -->
